# saddle-systems-collider-gen

./: Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: 7Ri3Z7Px.js  7kF4oUWh.js  BRFaGmz3.js  C0q8xNUB.js  C9hSQ8z0.js  CZJi016U.js  Cmd9JiSZ.js  CxR03R9h.js  DSmeYn7I.js  DhT37Km2.js
_app/immutable/entry/: app.BBCVpZGh.js  app.BuseQw9-.js  start.2eeVlQm_.js  start.BBFtkmhC.js
_app/immutable/nodes/: 0.BBpuPKQQ.js  0.k_izp4V0.js  1.DqrbkxNs.js  1._XqIlcKb.js  2.Ca_s3xSZ.js  2.rxOByFPy.js  3.CD8sf4JO.js  3.CidsO739.js  4.A7oQK1-y.js  4.CpBjK_AE.js
demo/animation_frames/: index.html
demo/atlas/: index.html
demo/basic/: index.html
demo/debug_gizmos/: index.html
demo/destructible/: index.html
demo/lab/: index.html
demo/masks/: index.html
demo/perf/: index.html
demo/tilemap_merge/: index.html
demos/animation_frames/: index.html
demos/atlas/: index.html
demos/basic/: index.html
demos/debug_gizmos/: index.html
demos/destructible/: index.html
demos/masks/: index.html
demos/perf/: index.html
demos/tilemap_merge/: index.html
docs/: architecture.md  baking.md  configuration.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/baking/: __data.json  index.html
docs/baking.md/: __data.json  index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
examples/: Cargo.toml
examples/animation_frames/: Cargo.toml
examples/animation_frames/src/: main.rs
examples/atlas/: Cargo.toml
examples/atlas/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/debug_gizmos/: Cargo.toml
examples/debug_gizmos/src/: main.rs
examples/destructible/: Cargo.toml
examples/destructible/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: main.rs
examples/lab/src/e2e/: atlas.rs  composite.rs  destructible.rs  mod.rs  smoke.rs  thresholds.rs
examples/masks/: Cargo.toml
examples/masks/src/: main.rs
examples/perf/: Cargo.toml
examples/perf/src/: e2e.rs  main.rs
examples/support/: Cargo.toml
examples/support/src/: lib.rs
examples/tilemap_merge/: Cargo.toml
examples/tilemap_merge/src/: main.rs
src/: atlas.rs  atlas_tests.rs  binary_image.rs  binary_image_tests.rs  components.rs  config.rs  contour.rs  contour_tests.rs  decompose.rs  decompose_tests.rs  errors.rs  generation.rs  hull.rs  hull_tests.rs  lib.rs  lib_tests.rs  marching_squares.rs  marching_squares_tests.rs  messages.rs  simplify.rs  simplify_tests.rs  systems.rs  systems_tests.rs  topology.rs  topology_tests.rs  triangulation.rs  triangulation_tests.rs  validate.rs  validate_tests.rs
tests/: plugin_integration.rs
