[workspace]
members = [
    "support",
    "basic",
    "atlas",
    "masks",
    "destructible",
    "animation_frames",
    "debug_gizmos",
    "perf",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["serialize"] }
saddle-systems-collider-gen = { path = ".." }
image = "0.25"
bevy_brp_extras = "0.19"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
