[workspace]
members = [
    "support",
    "basic",
    "atlas",
    "masks",
    "destructible",
    "tilemap_merge",
    "animation_frames",
    "debug_gizmos",
    "perf",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["serialize"] }
saddle-systems-collider-gen = { path = ".." }
image = "0.25"
bevy_brp_extras = "0.19"
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
