[package]
name = "saddle-systems-collider-gen-example-animation-frames"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-systems-collider-gen = { workspace = true }
saddle-systems-collider-gen-example-support = { path = "../support" }

[lints]
workspace = true
