[package]
name = "saddle-systems-collider-gen-example-perf"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { workspace = true }
saddle-pane = { workspace = true }
saddle-systems-collider-gen = { workspace = true }
saddle-systems-collider-gen-example-support = { path = "../support" }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }

[lints]
workspace = true
